--- a/groupe_index.html
+++ b/groupe_index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Scrooges</title>
     <link rel="stylesheet" href="./css/header_fouder_style.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/groupe_style.css">
 </head>
 <body>
     <header>
@@ -20,16 +20,6 @@
         </nav>
     </header>
     <main>
-        
-        <section class="last_song">
-
-        </section>
-        <section>
-            
-        </section>
-        <section class="contact_us">
-
-        </section>
     </main>
     <footer>
         <div class="footer_text">
@@ -40,6 +30,6 @@
             <img class="social logo" src="./images/instagram_black.svg" alt="logo instagram">
         </a>
     </footer>
-    <script src="./js/app.js"></script>
+    <script src="./js/groupe.js"></script>
 </body>
 </html>
