--- a/groupe_index.html
+++ b/groupe_index.html
@@ -30,6 +30,7 @@
             <img class="social logo" src="./images/instagram_black.svg" alt="logo instagram">
         </a>
     </footer>
+    <script src="./js/burger.js"></script>
     <script src="./js/groupe.js"></script>
 </body>
 </html>
