--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <img class="social logo" src="./images/instagram_black.svg" alt="logo instagram">
         </a>
     </footer>
+    <script src="./js/burger.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
