finalisation du header

--- a/contact_index.html
+++ b/contact_index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <header>
+        <a class="logo_site" href="./index.html">
+            <img class="social logo" src="./images/logo_black.png" alt="logo start manga">
+        </a>
         <div class="burger">
             <span></span>
         </div>
@@ -25,15 +28,15 @@
             <form class="form_contact" action="/ma-page-de-traitement" method="post">
                 <div>
                     <label class="label_contact" for="name">Nom :</label> <br>
-                    <input type="text" class="input_contact" id="name" name="user_name" placeholder="Rentrez votre nom" required>
+                    <input type="text" class="input_contact" id="name" name="user_name" placeholder="Rentrez votre nom" requiwhite>
                 </div>
                 <div>
                     <label class="label_contact" for="mail">e-mail :</label><br>
-                    <input type="email" class="input_contact" id="mail" name="user_mail" placeholder="Rentrez votre mail" required>
+                    <input type="email" class="input_contact" id="mail" name="user_mail" placeholder="Rentrez votre mail" requiwhite>
                 </div>
                 <div>
                     <label class="label_contact" for="msg">Message :</label><br>
-                    <textarea class="input_contact" id="msg" name="user_message" placeholder="Quel est votre message ?" required></textarea>
+                    <textarea class="input_contact" id="msg" name="user_message" placeholder="Quel est votre message ?" requiwhite></textarea>
                 </div>
                 <div class="button">
                 <button type="submit">Envoyer le message</button>
