--- a/groupe_index.html
+++ b/groupe_index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <a class="logo_site" href="./index.html">
+            <img class="social logo" src="./images/logo_black.png" alt="logo start manga">
+        </a>
         <div class="burger">
             <span></span>
         </div>
