rajout du paniert et correction du footer

--- a/contact_index.html
+++ b/contact_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Scrooges</title>
+    <title>StartManga - Contact</title>
     <link href="https://fonts.googleapis.com/css?family=Baloo+2|Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/header_fouder_style.css">
     <link rel="stylesheet" href="./css/contact_style.css">
@@ -19,9 +19,12 @@
         </div>
         <nav class="nav_header">
             <li class="link_nav_header"><a href="./index.html">Accueil</a></li>
-            <li class="link_nav_header"><a href="./groupe_index.html">Le groupe</a></li>
+            <li class="link_nav_header"><a href="./magasin_index.html">Magasin</a></li>
             <li class="link_nav_header"><a href="./contact_index.html">Nous contacter</a></li>
         </nav>
+        <section class="panier">
+            <img src="./images/panier.svg" alt="image pour accéder au panier">
+        </section>
     </header>
     <main>
         <section class="contact" >
@@ -36,10 +39,10 @@
                 </div>
                 <div>
                     <label class="label_contact" for="msg">Message :</label><br>
-                    <textarea class="input_contact" id="msg" name="user_message" placeholder="Quel est votre message ?" requiwhite></textarea>
+                    <textarea class="input_contact" id="msg" name="user_message" placeholder="Quel est votre message ?" requiwhite rows="5" cols="33"></textarea>
                 </div>
                 <div class="button">
-                <button type="submit">Envoyer le message</button>
+                    <button type="submit">Envoyer le message</button>
                 </div>
             </form>
         </section>
