--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Scrooges</title>
+    <title>StartManga</title>
     <link rel="stylesheet" href="./css/header_fouder_style.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -18,16 +18,48 @@
         </div>
         <nav class="nav_header">
             <li class="link_nav_header"><a href="./index.html">Accueil</a></li>
-            <li class="link_nav_header"><a href="./groupe_index.html">Le groupe</a></li>
+            <li class="link_nav_header"><a href="./magasin_index.html">Magasin</a></li>
             <li class="link_nav_header"><a href="./contact_index.html">Nous contacter</a></li>
         </nav>
+        <section class="panier">
+            <img src="./images/panier.svg" alt="image pour accéder au panier">
+        </section>
     </header>
     <main>
-        
-        <section class="last_song">
-
+        <section class="acceuil">
+            <div class="back"></div>
+            <h1>La passion de la lecture</h1>
         </section>
-        <section>
+        <section class="actu">
+            <div class="section_info" id="section_info1">
+                <h2>
+                    Section 1
+                </h2>
+                <img src="./images/couvertures/12.jpg">
+               <p>
+                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+               </p>
+            </div>
+            <div class="section_info" id="section_info2">
+                <h2>
+                    Section 2
+                </h2>
+                <img src="./images/couvertures/13.jpg">
+               <p>
+                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+               </p>
+            </div>
+            <div class="section_info" id="section_info3">
+                <h2>
+                    Section 3
+                </h2>
+                <img src="./images/couvertures/10.jpg">
+               <p>
+                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+               </p>
+            </div>
+        </section>
+        <section class="best_sell">
             
         </section>
         <section class="contact_us">
@@ -36,10 +68,10 @@
     </main>
     <footer>
         <div class="footer_text">
-            <p>&copy; 2020 - TheScrooges </p>
+            <p>&copy; 2020 - StartManga </p>
             <a href="#">Mention légale</a>
         </div>
-        <a href="https://www.instagram.com/the_scrooges/?igshid=puvf6dg7rwbh" target="_blank">
+        <a href="https://www.instagram.com/" target="_blank">
             <img class="social logo" src="./images/instagram_black.svg" alt="logo instagram">
         </a>
     </footer>
