--- a/magasin_index.html
+++ b/magasin_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Scrooges</title>
+    <title>StartManga - Magasin</title>
     <link rel="stylesheet" href="./css/header_fouder_style.css">
     <link rel="stylesheet" href="./css/groupe_style.css">
 </head>
@@ -18,9 +18,12 @@
         </div>
         <nav class="nav_header">
             <li class="link_nav_header"><a href="./index.html">Accueil</a></li>
-            <li class="link_nav_header"><a href="./groupe_index.html">Le groupe</a></li>
+            <li class="link_nav_header"><a href="./magasin_index.html">Magasin</a></li>
             <li class="link_nav_header"><a href="./contact_index.html">Nous contacter</a></li>
         </nav>
+        <section class="panier">
+            <img src="./images/panier.svg" alt="image pour accéder au panier">
+        </section>
     </header>
     <main>
     </main>
@@ -34,6 +37,6 @@
         </a>
     </footer>
     <script src="./js/burger.js"></script>
-    <script src="./js/groupe.js"></script>
+    <script src="./js/magasin.js"></script>
 </body>
 </html>
