--- a/achat_index.html
+++ b/achat_index.html
@@ -31,21 +31,21 @@
                 </div>
             </section>
             <section class="contact" >
-                <form class="form_contact" action="/ma-page-de-traitement" method="post">
+                <form class="form_contact" action="" method="post">
                     <div>
-                        <label class="label_contact" for="name">Nom :</label> <br>
-                        <input type="text" class="input_contact" id="name" name="user_name" placeholder="Rentrez votre nom" required>
+                        <label class="label_contact" for="last_name">Nom :</label> <br>
+                        <input type="text" class="input_contact" id="name" name="first_name" placeholder="Rentrez votre nom" required>
                     </div>
                     <div>
-                        <label class="label_contact" for="name">Prénom :</label> <br>
-                        <input type="text" class="input_contact" id="name" name="user_name" placeholder="Rentrez votre nom" required>
+                        <label class="label_contact" for="first_name">Prénom :</label> <br>
+                        <input type="text" class="input_contact" id="name" name="last_name" placeholder="Rentrez votre nom" required>
                     </div>
                     <div>
                         <label class="label_contact" for="mail">e-mail :</label><br>
-                        <input type="email" class="input_contact" id="mail" name="user_mail" placeholder="Rentrez votre mail" required>
+                        <input type="email" class="input_contact" id="mail" name="mail" placeholder="Rentrez votre mail" required>
                     </div>
-                    <div class="button">
-                        <button type="submit">acheter</button>
+                    <div id="button">
+                        <button >acheter</button>
                     </div>
                 </form>
             </section>
