--- a/contact_index.html
+++ b/contact_index.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="contact" >
-            <form class="form_contact" action="/ma-page-de-traitement" method="post">
+            <form class="form_contact" action="#" method="post">
                 <div>
                     <label class="label_contact" for="name">Nom :</label> <br>
                     <input type="text" class="input_contact" id="name" name="user_name" placeholder="Rentrez votre nom" required>
