--- a/achat_index.html
+++ b/achat_index.html
@@ -45,7 +45,7 @@
                         <input type="email" class="input_contact" id="mail" name="mail" placeholder="Rentrez votre mail" required>
                     </div>
                     <div id="button">
-                        <button >acheter</button>
+                        <button type="submit">acheter</button>
                     </div>
                 </form>
             </section>
